<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Sweet</string>
	<string name="save">Save</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="server">Server</string>
	<string name="usessl">Use secure connection SSL</string>
	<string name="acceptcerts">Accept any SSL certificate</string>
	<string name="encryptpassword">Encrypt password</string>
	<string name="cancel">Cancel</string>
	<string name="validate">Validate</string>
	<string name="back">Back</string>
	<string name="createAccount">Create Account</string>
	<!-- For the contact editor activity -->
	<string name="contact">Contact</string>
	<string name="firstName">First name</string>
	<string name="lastName">Last name</string>
	<string name="accountName">Organization</string>
	<string name="title">Title</string>
	<string name="sample">Name</string>

	<string name="personal_info">Personal information</string>
	<string name="contact_information">Contact information</string>
	<string name="address_info">Address information</string>
	<string name="workPhone">Work</string>
	<string name="mobilePhone">Mobile</string>
	<string name="workFax">Fax</string>
	<string name="email1">Email</string>

	<string name="address">Address</string>
	<string name="street">Street</string>
	<string name="city">City</string>
	<string name="postalCode">Postal code</string>
	<string name="state">Region</string>
	<string name="country">Country</string>
	<string name="choose_account">Choose Sweet account to create the contact</string>
	<string name="error_no_account">Please create a Sweet account before adding contacts of this kind.</string>
	<!-- End contact editor activity -->
	<string name="only_one_account">You already have one Sweet account. Sweet does not support multiple accounts.</string>
	<string name="validationOk">Your account settings have been validated
		successfully. Press the create button to create your account.</string>
<string name="encryptHint">Uncheck if you are using an LDAP backed account or experiencing problems validating your account.</string>
	<string name="account_label">Sweet account</string>
	<string name="sync_preferences">Sweet synchronization preferences</string>
	<string name="sync_notifications_summary">Check this is you want to sync leads and calls with
		SugarCRM</string>
	<string name="sync_notifications_title">Sync notifications</string>
	<string name="sync_calendar_summary">Check this is you want to sync the calendar with
		SugarCRM</string>
	<string name="sync_calendar_title">Sync calendar</string>
	<string name="sync_contacts_summary">Check this is you want to sync contacts with
		SugarCRM</string>
	<string name="sync_contacts_title">Sync contacts</string>
	<string name="full_sync_summary">Check this option to perform a full sync every time
		the account tries to sync with the SugarCRM server</string>
	<string name="full_sync_title">Perform full sync</string>
 
	<string name="sync_version">0.1</string>
	<string name="succesful_authentication">Account successfully authenticated. Try to sync
		again if there were any problems in your last attempt</string>
	<string name="activity_create">Enter your new account settings</string>
	<string name="activity_check_update">Please check and update your account data settings
	</string>
	<string name="sync_conflict">Conflict resolution</string>

	<string name="server_resolve_title">Prefer server</string>
	<string name="server_resolve_summary">Use server data when there is a conflict between
		locally modified contacts and server modified contacts</string>
	<!--  UI for conflict resolving -->

	<string name="notify_sync_conflict_message">Press to resolve conflicts when syncing to
		SugarCRM.</string>
	<string name="sugarcrm_profile">SugarCRM Profile</string>	
	<string name="notify_sync_conflict_title">Pending conflicts.</string>
	<string name="notify_sync_conflict_ticket">Sweet sync conflict</string>
	<string name="resolve">Resolve</string>
	<string name="resolve_conflict">Resolving contact </string>
	<string name="conflict_choose_field">Choose the preferred source for each conflicting
		field</string>
	<string name="spinner_tag_field">spinner_tag_field</string>
	<string name="spinner_tag_local">spinner_tag_local</string>
	<string name="spinner_tag_remote">spinner_tag_remote</string>
	<string name="conflict_resolved">All conflicts have been resolved. Try again to sync
		manually if needed.</string>
	<string name="conflict_error">An error ocurred while trying to sync the resolved
		conflicts. Try again to sync manually if needed.</string>
<string name="pendent_resolve">Resolve operation pending. Please wait.</string>
	<!--   -->
	<!-- CONSTANTS FOR AUTHORITY AND ACCOUNT TYPE -->
	<string name="account_type">com.github.vseguip.sweet.account</string>
	<!-- CONSTANTS FOR PREFERENCES KEY -->
	<string name="prefer_server_resolve">server_resolve</string>
	<string name="full_sync">fullSync</string>
</resources>
