<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:theme="@android:style/Theme.Light">
	<ScrollView android:id="@+id/scrollView1"
		android:layout_width="fill_parent" android:layout_height="0dip"
		android:layout_weight="1">
	
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:baselineAligned="false"
			android:orientation="vertical">
	
			<LinearLayout style="@style/textSubtitle"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"  
				android:orientation="horizontal"
				android:paddingLeft="0sp">
				<Button android:text="" android:layout_width="fill_parent"
					android:layout_weight="2"
					android:width="0sp" 
					android:drawableLeft="@android:drawable/ic_media_previous"
					android:layout_height="wrap_content" android:id="@+id/buttonPreviousConflict"/>
				<LinearLayout android:layout_height="wrap_content"
					android:width="0sp"
					android:layout_weight="0.75" 
					android:layout_width="fill_parent" android:orientation="vertical"
					android:paddingLeft="0sp">

					<TextView android:text="@string/resolve_conflict" style="@style/textSubtitle"
						android:id="@+id/textConflictName" />
					<TextView android:text="@string/conflict_choose_field"
						style="@style/textSubtitle" android:textSize="14sp"
						android:singleLine="false" />
				</LinearLayout>	
				<Button android:text="" android:layout_width="fill_parent"
					android:width="0sp"
					android:drawableRight="@android:drawable/ic_media_next"
					android:layout_height="wrap_content"
					android:layout_weight="2" android:id="@+id/buttonNextConflict"/>
			</LinearLayout>

			<TableLayout style="@style/infoBox" stretch_columns="0,1"
				android:id="@+id/fieldTable">

			</TableLayout>

		</LinearLayout>


	</ScrollView>
	<LinearLayout android:layout_width="fill_parent" android:baselineAligned="false"
		android:orientation="vertical" style="@android:style/ButtonBar"
		android:layout_height="wrap_content">

		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:stretchColumns="0,1">

			<TableRow android:layout_width="wrap_content" android:id="@+id/tableRow1"
				android:layout_height="fill_parent" android:layout_gravity="top">
				<Button android:text="@string/resolve"
					android:layout_gravity="bottom" android:layout_width="wrap_content"
					android:id="@+id/buttonResolve" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/cancel" android:layout_gravity="bottom"
					android:layout_width="wrap_content" android:id="@+id/buttonCancel"
					android:layout_height="wrap_content"></Button>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>





